Added backend migrations
