# backend/static/swagger.json
@@ -24,8 +24,8 @@
             "description": "All endpoints related to the Calendar table"
         },
         {
-            "name": "Organizations",
-            "description": "All endpoints related to the Company table"
+            "name": "Organization",
+            "description": "All endpoints related to the Organization table"
         },
         {
             "name": "Event",
@@ -37,15 +37,15 @@
         }
     ],
     "paths": {
-        "/organizations": {
+        "/organization": {
             "get": {
                 "tags": [
-                    "Organizations"
+                    "Organization"
                 ],
                 "summary": "",
                 "responses": {
                     "200": {
-                        "description": "There should be array of companies located in response",
+                        "description": "There should be array of organizations located in response",
                         "schema": {
                             "type": "array",
                             "properties": {
@@ -69,7 +69,7 @@
             },
             "post": {
                 "tags": [
-                    "Organizations"
+                    "Organization"
                 ],
                 "summary": "",
                 "requestBody": {
